Revert "Refactor/optimize try excepts"

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,9 @@
 version: '3'
 
 services:
-  scheduler:
+  ros6-le-msdns:
     image: exray88/routeros6-letsencypt-msdns-mscentos
     network_mode: bridge
-    restart: unless-stopped
-  restarter:
-    image: docker:cli
-    volumes: ["/var/run/docker.sock:/var/run/docker.sock"]
-    command: ["/bin/sh", "-c", "while true; do sleep 86400; docker restart routeros6-renewle-msdns-scheduler-1; done"]
-    restart: unless-stopped
+    container_name: ros6-le-msdns
+    # restart: always
+    tty: true
